chore:#140 CodeRabbit 리뷰 반영