@@ -1,6 +1,7 @@
 package or.hyu.ssd.domain.document.usecase.result;
 
 import java.util.LinkedHashMap;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -13,7 +14,7 @@ public record ExternalAiDocumentCheckResult(
         return new ExternalAiDocumentCheckResult(
                 documentId,
                 changedBlockIds == null ? List.of() : List.copyOf(changedBlockIds),
-                checkList == null ? Map.of() : new LinkedHashMap<>(checkList)
+                checkList == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(checkList))
         );
     }
 }
